# arbitragepy

./: .gitignore  Makefile  README.md  pyproject.toml
arbitragepy/: __init__.py  arbitrage.py  exceptions.py  exchange_payload.py  fee.py  quantity_increment.py
arbitrageutils/: __init__.py  currency_payload.py  fee.py  order_data.py  quantity_increment.py  spread.py
tests/: conftest.py  test_arbitrage.py  test_arbitragepy.py  test_currency_payload.py  test_exchange_payload.py  test_fee.py  test_order_data.py  test_quantity_increment.py  test_spread.py
