[tool.poetry]
name = "arbitragepy"
version = "1.0.0"
description = "Arbitrage utilities. Has functions that make it easy to work with arbitrage mathematics."
license = "MIT"
authors = ["astsu <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
